modal sizes fixed on mobile, information flow in create form

--- a/client/src/commonComponents/SignModal/SignModal.css
+++ b/client/src/commonComponents/SignModal/SignModal.css
@@ -18,6 +18,7 @@
     padding: 10px;
     color: #c5c3c6;
     cursor: pointer;
+    font-size: 25px;
 }
 
 .sign-modal-exit-icon:hover{
@@ -26,10 +27,8 @@
 
 @media only screen and (max-width: 450px) {
     .sign-modal {
-        width: 100vw;
-        height: 100vh;
-        max-width: 100vw;
-        max-height: 100vh;
+        width: 95vw;
+        max-height: 95vh;
         padding-top: 10px;
     }
 
@@ -38,7 +37,7 @@
         align-items: center;
         justify-content: center;
         border-radius: 50%;
-        margin: 10px 10px 0px 10px;
+        margin: 10px 10px -20px 10px;
         width: 15px;
         height: 15px;
         background: white;
