--- a/client/src/views/Event/components/GeneralContainer/AboutEditor/AboutEditor.css
+++ b/client/src/views/Event/components/GeneralContainer/AboutEditor/AboutEditor.css
@@ -40,6 +40,7 @@
 
 @media only screen and (max-width: 450px) {
     .about-editor {
-        width: 95vw;
+        width: 90vw;
+        margin: 20px 0px;
     }
 }
