--- a/client/src/views/Profile/Profile.css
+++ b/client/src/views/Profile/Profile.css
@@ -12,5 +12,6 @@
 @media only screen and (max-width: 450px) {
     .profile-create-form-wrapper {
         width: 85vw;
+        margin: 20px 0px;
     }
 }
